Complete airbyte setup + fix organizations
