# services/users/models/workspace.go
@@ -13,7 +13,9 @@ type Workspace struct {
 	OrganizationID     uuid.UUID
 	UserMembers        []WorkspaceMember `gorm:"foreignKey:WorkspaceID"`
 	PendingInvitations []Invitation      `gorm:"foreignKey:WorkspaceID"`
-	AirbyteWorkspaceID string
+
+	AirbyteWorkspaceID   string
+	AirbyteDestinationID string
 }
 
 func (u *Workspace) TableName() string {
@@ -23,13 +25,14 @@ func (u *Workspace) TableName() string {
 // ToPb return the workspace.UserMembers of a OrganizationMember
 func (w *Workspace) ToPb() *users.Workspace {
 	pb := &users.Workspace{
-		Id:                 w.ID.String(),
-		OrganizationId:     w.OrganizationID.String(),
-		Description:        w.Description,
-		Name:               w.Name,
-		AirbyteWorkspaceId: w.AirbyteWorkspaceID,
-		CreatedAt:          timestamppb.New(w.CreatedAt),
-		UpdatedAt:          timestamppb.New(w.UpdatedAt),
+		Id:                   w.ID.String(),
+		OrganizationId:       w.OrganizationID.String(),
+		Description:          w.Description,
+		Name:                 w.Name,
+		AirbyteWorkspaceId:   w.AirbyteWorkspaceID,
+		AirbyteDestinationId: w.AirbyteDestinationID,
+		CreatedAt:            timestamppb.New(w.CreatedAt),
+		UpdatedAt:            timestamppb.New(w.UpdatedAt),
 	}
 
 	members := make([]*users.UserMember, len(w.UserMembers))
